--- a/static/css/base.css
+++ b/static/css/base.css
@@ -54,8 +54,8 @@ body {
     color: #000 !important;
 }
 
-.border-black {
-    border: 1px solid black !important;
+.bg-black {
+    background: #000 !important;
 }
 
 /*  Media Queries */
