Added products app, models and fixtures

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -14,13 +14,13 @@
 
         <li class="nav-item dropdown">
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="clothing-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Mentors
+                Category
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
                 <a href="" class="dropdown-item">Bussiness</a>
                 <a href="" class="dropdown-item">Life-style</a>
                 <a href="" class="dropdown-item">Manifestation</a>
-                <a href="" class="dropdown-item">All topics</a>
+                <a href="" class="dropdown-item">All categories</a>
             </div>
         </li>
 
