--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -8,7 +8,7 @@
                 <a href="" class="dropdown-item">By Fee</a>
                 <a href="" class="dropdown-item ">By Rating</a>
                 <a href="" class="dropdown-item ">By Category</a>
-                <a href="" class="dropdown-item">All Mentors</a>
+                <a href="{% url 'products' %}" class="dropdown-item">All Mentors</a>
             </div>
         </li>
 
